services/audiobookshelf/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - image: ghcr.io/advplyr/audiobookshelf:2.21.0
          name: audiobookshelf
          volumeMounts:
            - mountPath: /audiobooks
              name: audiobookshelf-audiobooks
            - mountPath: /podcasts
              name: audiobookshelf-podcasts
            - mountPath: /config
              name: audiobookshelf-config
            - mountPath: /metadata
              name: audiobookshelf-metadata
      volumes:
        - name: audiobookshelf-audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: audiobookshelf-podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts
        - name: audiobookshelf-config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: audiobookshelf-metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
