services/audiobookshelf/k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
  namespace: apps
spec:
  ports:
    - name: audiobookshelf
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: audiobookshelf
  type: NodePort
