services/audiobookshelf/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: "traefik"
  rules:
    - host: audiobooks.manujkarki.com.np
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
            path: /
            pathType: Prefix
